ADD dynamic dino, cactus, ground && still have bugs

--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
         <h2 class="start-screen">Press Any Key To Start</h2>
         <img class="ground" src="./images/ground.png" alt="ground" />
         <img class="ground" src="./images/ground.png" alt="ground" />
-        <img
-          class="dino"
-          src="./images/dino-stationary.png"
-          alt="dino-stationary"
-        />
+        <img class="dino" src="./images/dino-stationary.png" />
       </div>
     </main>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./javascripts/app.js"></script>
   </body>
 </html>
